# autonomous_vehicle

./: .gitignore  LICENSE  README.md
av_03/: CMakeLists.txt  package.xml
av_03/launch/: av.launch
av_03/models/media/materials/scripts/: av.material
av_03/scripts/: control_prediction.py  states_node.py
av_03/worlds/: custom.world  sonoma_raceway.world  sonoma_raceway_customized.world
av_msgs/: CMakeLists.txt  package.xml
av_msgs/msg/: Key_mapping.msg  Mode.msg  States.msg
docker/: Dockerfile.av  build.sh  remote_python  run_cpu.sh  run_gpu.sh  run_terminal.sh
launch/: av.launch
scripts/: collector_node.py  controller_node.py  states_node.py  visualizer_node.py
train/: environment.yml  train_av.py
train/dataset_tools/: change_img_name.py  concatenate_labels.py  crop_images.py  move_labels.py
