<?xml version="1.0"?>
<package format="2">
  <name>av_msgs</name>
  <version>0.0.1</version>
  <description>
  Messages for an autonomous vehicle
  </description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
